--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["BEN <benjamin.hill28@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+seaborn = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 
