--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["BEN <benjamin.hill28@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 seaborn = "^0.11.1"
+matplotlib = "^3.4.2"
+pandas = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 
